--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
 /*CSS style sheet for map page*/
-.clr {
-	clear:both;
-}
 
 .nav ul {
   list-style: none;
@@ -51,11 +48,10 @@
     padding: 10px 10px 10px 10px;
 	z-index: 21;
 	margin-bottom: 0px;
-    right: 2.2%;
+	right: 35px;
 	top: 1165px;
 	background: rgba(58,55,55,.5);
 	border: thin solid #523535;
-	margin-right:15px;
 }
 
 .title {
@@ -108,7 +104,7 @@ div.scroll {
 	height: 85%;
 	margin-left: 3px;
 	margin-bottom: 3px;
-	overflow-y: scroll;
+	overflow: scroll;
 	z-index: 10;
 	padding-top: 3px;
 	padding-right: 3px;
@@ -127,8 +123,7 @@ div.scroll {
 
 #map{
 	height: 1020px;
-	opacity: 1;
-	width: 97%;
+	width: 98%;
 	font-family: arapey;
 	font-style: normal;
 	font-weight: 400;
@@ -136,7 +131,6 @@ div.scroll {
 	z-index: 10;
 	margin-left: 10px;
 	margin-top: -45px;
-	pointer-events: all;
 }
 
 /*Arch image at top of page*/
@@ -146,6 +140,7 @@ img {
     margin-top: -30px;
 }
     
+
 h1 {
 	font-family: arapey;
 	font-size: 60px;
@@ -177,17 +172,17 @@ body{
 	font-style: normal;
 	font-weight: 400;
 	color: #675A5A;
-	min-width: 900px;
-	min-height: 700px;
-	overflow-x: hidden;
 }
 
+.leafletoclickable: hover{
+	width: 5;
+	z-index: 10;
+}
 /*SM markers*/
 .leaflet-clickable {
 	marker-width: 50%;
     stroke-opacity: .8;
-	z-index: -5;
-	position: absolute;
+	z-index: 10;
 	-webkit-transition-property: background color;
     -webkit-transition-duration: .5s;
     -webkit-transition-timing-function: ease-in;
@@ -234,57 +229,6 @@ body{
     color: #F2ECEB;
     line-height: 110%;
     border: thin solid #000000;
-    z-index: 10;
+    z-index: 100;
 }
 
-/*Magnifier glass
-*/
-#zoommap,.zoommap  {
-  background: #73b5e5;
-  position: absolute;
-  z-index: 20;
-  width: 200px;
-  height: 200px;
-  overflow:hidden;
-  -webkit-transform:rotate(-60deg);
-     -moz-transform:rotate(-60deg);
-      -ms-transform:rotate(-60deg);
-       -o-transform:rotate(-60deg);
-          transform:rotate(-60deg);
-}
-
-.leaflet-map-pane, .leaflet-popup-pane, .leaflet-objects-pane { z-index: 1001;}
-
-#zoomlens,.zoomlens  {
-margin-top: 15px;
-  overflow: visible;
-  top: -9999px;
-  left: -9999px;
-}
-
-#border {
-  border: 5px solid #404040;
-  border-radius: 50%;
-  box-shadow: 0 0 10px rgba(0,0,0,0.25);
-}
-
-.overlay {
-  position: absolute;
- /* pointer-events: none;*/
-  overflow: hidden;
-  width: 200px;
-  height: 200px;
-  z-index: 100;
-}
-
-.rotater {
-  -webkit-transform:rotate(30deg);
-     -moz-transform:rotate(30deg);
-      -ms-transform:rotate(30deg);
-       -o-transform:rotate(30deg);
-          transform:rotate(30deg);
-}
-
-.leaflet-overlay-pane {
-	z-index: 5;
-}
