--- a/css/satstyle.css
+++ b/css/satstyle.css
@@ -1,17 +1,21 @@
 /*CSS style sheet for satellite map page*/
-/*.clr {
+.clr {
 	clear:both;
+}
+
 }*/
 
 .nav ul {
   list-style: none;
   background-color: rgba(58,55,55,.2);
   text-align: center;
-  padding: 0;
+  padding-right: 20px;
+  padding-left: 20px;
   margin-top: -8px;
-  margin-right: 32%;
-  margin-left: 32%;
+  margin-right: 25%;
+  margin-left: 25%;
 }
+
 .nav li {
   font-family: arapey;
   font-size: 1em;
