--- a/css/style2.css
+++ b/css/style2.css
@@ -2,6 +2,11 @@
 
 @charset "utf-8";
 
+.clr {
+	clear:both;
+}
+
+
 /*Many elements are set to an initial "hidden" so that
 js can fade them in*/
 .nav {
@@ -12,10 +17,11 @@ js can fade them in*/
   list-style: none;
   background-color: rgba(58,55,55,.2);
   text-align: center;
-  padding: 0;
-  margin-top: -40px;
-  margin-right: 32%;
-  margin-left: 32%;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-top: -8px;
+  margin-right: 25%;
+  margin-left: 25%;
 }
 
 .nav li {
