--- a/css/style3.css
+++ b/css/style3.css
@@ -1,14 +1,21 @@
 /*CSS style sheet for credits page*/
 
+.clr {
+  clear:both;
+}
+
+
 .nav ul {
   list-style: none;
   background-color: rgba(58,55,55,.2);
   text-align: center;
-  padding: 0;
-  margin-top: -18px;
-  margin-right: 32%;
-  margin-left: 32%;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-top: -8px;
+  margin-right: 25%;
+  margin-left: 25%;
 }
+
 .nav li {
   font-family: arapey;
   font-size: 1em;
