--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@
 	margin-bottom: 0px;
 	right: 35px;
 	top: 1165px;
-	background: rgba(58,55,55,.5);
+	background: rgba(58,55,55,1);
 	border: thin solid #523535;
 }
 
@@ -95,7 +95,7 @@
 	position: absolute;
 	left: 1px;
 	z-index: 21;
-	background: rgba(58,55,55,.5);
+	background: rgba(58,55,55,1);
 	border: thin solid #000000;
 }
 
