--- a/css/style3.css
+++ b/css/style3.css
@@ -11,7 +11,7 @@
   text-align: center;
   padding-right: 20px;
   padding-left: 20px;
-  margin-top: -8px;
+  margin-top: -1%;
   margin-right: 25%;
   margin-left: 25%;
 }
