--- a/css/style2.css
+++ b/css/style2.css
@@ -14,14 +14,17 @@ js can fade them in*/
 }
 
 .nav ul {
-  list-style: none;
-  background-color: rgba(58,55,55,.2);
-  text-align: center;
-  padding-right: 20px;
-  padding-left: 20px;
-  margin-top: -3%;
-  margin-right: 25%;
-  margin-left: 25%;
+	list-style: none;
+	background-color: rgba(58,55,55,.2);
+	text-align: center;
+	padding-right: 20px;
+	padding-left: 20px;
+	margin-top: -3%;
+	margin-right: 25%;
+	margin-left: 25%;
+	font-family: special-elite;
+	font-style: normal;
+	font-weight: 400;
 }
 
 .nav li {
@@ -40,9 +43,12 @@ js can fade them in*/
 }
  
 .nav a:hover {
-  background-color: #783745;
-  padding-right: 10px;
-  padding-left: 10px;
+	background-color: #783745;
+	padding-right: 10px;
+	padding-left: 10px;
+	font-family: special-elite;
+	font-style: normal;
+	font-weight: 400;
 }
  
 .nav a.active {
@@ -52,27 +58,33 @@ js can fade them in*/
 }
 
 .nav li {
-    display: inline-block;
-    margin-right: 10px;
-    margin-left: 10px;
+	display: inline-block;
+	margin-right: 10px;
+	margin-left: 10px;
+	font-family: special-elite;
+	font-style: normal;
+	font-weight: 400;
+	font-size: 10pt;
   }
 
 /*entire page*/
 body {
-	background-color: #E8E6E1;
 	width: 100%;
 	font-family: arapey;
 	color: #574B4D;
-	font-family: arapey;
+	font-family: special-elite;
 	margin-left: 3%;
 	margin-top: 3%;
 	margin-right: 3%;
 	margin-bottom: 3%;
+	background-size: contain;
+	font-style: normal;
+	font-weight: 400;
 }
 
 /*narrative text*/
 body p {
-	font-size: 18pt;
+	font-size: 14pt;
 	line-height: 130%;
 	color: #403E3E;
 	margin-right: 300px;
@@ -83,6 +95,9 @@ body p {
 	padding-bottom: 10px;
 	padding-left: 10px;
 	visibility: hidden;
+	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-weight: 300;
 }
 
 img {
@@ -92,10 +107,10 @@ img {
 }
 
 h1 {
-	font-family: arapey;
+	font-family: special-elite;
 	font-style: normal;
 	font-weight: 400;
-	font-size: 40pt;
+	font-size: 30pt;
 	text-decoration: none;
 	color: #675A5A;
 	clear: none;
@@ -126,7 +141,7 @@ h2 a {
 .title {
 	color: #783745;
 	font-weight: 500;
-	font-size: 42pt;
+	font-size: 33pt;
 }
 
 #link {
@@ -138,7 +153,7 @@ h2 a {
 .emphasis {
 	color: #8C2A3F;
 	font-weight: 500;
-	font-size: 18pt;
+	font-size: 14pt;
 	margin-top: -20px;
 }
 
