--- a/css/satstyle.css
+++ b/css/satstyle.css
@@ -1,18 +1,22 @@
 /*CSS style sheet for satellite map page*/
 
+.clr {
+	clear:both;
+}
+
 .nav ul {
   list-style: none;
   background-color: rgba(58,55,55,.2);
   text-align: center;
   padding-right: 20px;
   padding-left: 20px;
-  margin-top: -8px;
+  margin-top: -.5%;
   margin-right: 25%;
   margin-left: 25%;
 }
 
 .nav li {
-  font-family: arapey;
+  font-family: Arial, sans-serif;
   font-size: 1em;
   line-height: 40px;
   height: 40px;
@@ -44,21 +48,9 @@
     margin-left: 10px;
   }
 
-#vcr-controls {
-	position: absolute;
-	width: 510px;
-    padding: 10px 10px 10px 10px;
-	z-index: 21;
-	margin-bottom: 0px;
-    right: 2.2%;
-	top: 1165px;
-	background: rgba(58,55,55,.5);
-	border: thin solid #523535;
-	margin-right:15px;
-}
 
 .title {
-    font-family: arapey;
+    font-family: Arial, sans-serif;
     font-size: 18pt;
     margin-right: 100px;
 }
@@ -71,7 +63,7 @@
 	margin-left: 32px;
 	margin-top: 20px;
 	top: 225px;
-	font-family: arapey;
+	font-family: Arial, sans-serif;
 	padding: 5px 5px 5px 5px;
 	font-style: normal;
 	font-weight: 400;
@@ -113,10 +105,10 @@ div.scroll {
 }
 
 #map{
-	height: 1020px;
-	opacity: 1;
+	height: 1040px;
+	opacity: 1.0;
 	width: 97%;
-	font-family: arapey;
+	font-family: Arial, sans-serif;
 	font-style: normal;
 	font-weight: 400;
 	border: medium solid #7E5555;
@@ -134,7 +126,7 @@ img {
 }
     
 h1 {
-	font-family: arapey;
+	font-family: Arial, sans-serif;
 	font-size: 60px;
     position: relative;
     margin-top: -160px;
@@ -147,7 +139,7 @@ h1 {
 
 /*"Subjective Marker" in menu box*/
 h2 {
-	font-family: arapey;
+	font-family: Arial, sans-serif;
 	font-size: 18pt;
 	text-align: center;
 	color: #F7F4F4;
@@ -160,7 +152,8 @@ h2 {
 
 body{
     background-color: #E8E6E1;
-	font-family: arapey;
+/*    background-color: #ffffff;
+*/	font-family: Arial, sans-serif;
 	font-style: normal;
 	font-weight: 400;
 	color: #675A5A;
@@ -203,7 +196,7 @@ body{
 	text-align: center;
 	float: left;
 	position: relative;
-	bottom: 85px;
+	bottom: 15px;
 	border: thin solid #000000;
 }
 
@@ -212,7 +205,8 @@ body{
 	padding-top: 6px 6px 6px 6px;
 	background-color: #C35557;
 	position: relative;
-	bottom: 85px;
+	bottom: 15px;
+	z-index: 21;
 }
 
 .leaflet-popup-content-wrapper {
@@ -227,11 +221,11 @@ body{
 /*Magnifier glass
 */
 #zoommap,.zoommap  {
-  background: #73b5e5;
+  background: #FFFFFF;
   position: absolute;
   z-index: 20;
-  width: 200px;
-  height: 200px;
+  width: 100px;
+  height: 100px;
   overflow:hidden;
   -webkit-transform:rotate(-60deg);
      -moz-transform:rotate(-60deg);
@@ -242,12 +236,12 @@ body{
 
 .leaflet-map-pane, .leaflet-popup-pane, .leaflet-objects-pane { z-index: 1001;}
 
-#zoomlens,.zoomlens  {
+/*#zoomlens,.zoomlens  {
   overflow: visible;
   top: -9999px;
   left: -9999px;
 }
-
+*/
 #border {
 /*  border: 1px solid #404040;
 */  border-radius: 50%;
