--- a/css/style2.css
+++ b/css/style2.css
@@ -2,33 +2,30 @@
 
 @charset "utf-8";
 
-/*.clr {
+.clr {
 	clear:both;
-}*/
+}
 
 
 /*Many elements are set to an initial "hidden" so that
 js can fade them in*/
 .nav {
-  visibility: hidden;
+	visibility: hidden;
 }
 
 .nav ul {
-	list-style: none;
-	background-color: rgba(58,55,55,.2);
-	text-align: center;
-	padding-right: 20px;
-	padding-left: 20px;
-	margin-top: -3%;
-	margin-right: 25%;
-	margin-left: 25%;
-	font-family: special-elite;
-	font-style: normal;
-	font-weight: 400;
+  list-style: none;
+  background-color: rgba(58,55,55,.2);
+  text-align: center;
+  padding-right: 20px;
+  padding-left: 20px;
+  margin-top: -3%;
+  margin-right: 25%;
+  margin-left: 25%;
 }
 
 .nav li {
-  font-family: arapey;
+  font-family: Arial, sans-serif;
   font-size: 1em;
   line-height: 40px;
   height: 40px;
@@ -43,12 +40,9 @@ js can fade them in*/
 }
  
 .nav a:hover {
-	background-color: #783745;
-	padding-right: 10px;
-	padding-left: 10px;
-	font-family: special-elite;
-	font-style: normal;
-	font-weight: 400;
+  background-color: #783745;
+  padding-right: 10px;
+  padding-left: 10px;
 }
  
 .nav a.active {
@@ -58,21 +52,17 @@ js can fade them in*/
 }
 
 .nav li {
-	display: inline-block;
-	margin-right: 10px;
-	margin-left: 10px;
-	font-family: special-elite;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 10pt;
+    display: inline-block;
+    margin-right: 10px;
+    margin-left: 10px;
   }
+
 
 /*entire page*/
 body {
 	width: 100%;
-	font-family: arapey;
 	color: #574B4D;
-	font-family: special-elite;
+	font-family: arapey;
 	margin-left: 3%;
 	margin-top: 3%;
 	margin-right: 3%;
@@ -95,19 +85,19 @@ body p {
 	padding-bottom: 10px;
 	padding-left: 10px;
 	visibility: hidden;
-	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
+	font-family: arapey;
 	font-style: normal;
-	font-weight: 300;
+	font-weight: 400;
 }
 
 img {
 	float:left;
-	width: 48%;
+	width: 775px;
 	visibility: hidden;
 }
 
 h1 {
-	font-family: special-elite;
+	font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif, arapey, de-walpergens-pica, droid-serif, quattrocento-sans;
 	font-style: normal;
 	font-weight: 400;
 	font-size: 30pt;
@@ -123,24 +113,10 @@ h1 {
 	visibility: hidden;
 }
 
-/*"Go to Map" link at bottom*/
-h2 a {
-	text-decoration: underline;
-	font-family: arapey;
-	font-style: normal;
-	font-weight: 500;
-	font-size: 40pt;
-	color: #783745;
-	font-size: 48pt;
-	padding: 0px;
-	width: 100%;
-	text-align: center;
-}
-
 /*changes color of book's title*/
 .title {
 	color: #783745;
-	font-weight: 500;
+	font-weight: 400;
 	font-size: 33pt;
 }
 
@@ -152,22 +128,13 @@ h2 a {
 /*colors text about the map*/
 .emphasis {
 	color: #8C2A3F;
-	font-weight: 500;
-	font-size: 14pt;
 	margin-top: -20px;
 }
 
+/*Josh's signature block*/
 .signature {
-	font-size: 18pt;
+	font-size: 16pt;
 	margin-top: -5px;
 	float: left;
 	width: 600px;
-}
-
-.link h2 .link {
-	position: relative;
-	max-width: 400px;
-	margin-bottom: 37px;
-	left: 102px;
-	bottom: 25px;
 }
