--- a/css/style2.css
+++ b/css/style2.css
@@ -2,6 +2,11 @@
 
 @charset "utf-8";
 
+@font-face {
+	font-family: Franklin Gothic Heavy;
+	src: url(franklin_gothic_heavy.ttf);
+}
+
 .clr {
 	clear:both;
 }
