--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 /*CSS style sheet for map page*/
 
+@font-face {
+font-family: Franklin Gothic Heavy;
+src: url(franklin_gothic_heavy.ttf);
+}
+
 .clr {
 	clear:both;
 }
@@ -16,7 +21,8 @@
 }
 
 .nav li {
-  font-family: Arial, sans-serif;
+  font-family: arial;
+  font-weight: bold;
   font-size: 1em;
   line-height: 40px;
   height: 40px;
@@ -51,17 +57,16 @@
 #vcr-controls {
 	position: absolute;
 	width: 510px;
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
 	z-index: 21;
-	margin-bottom: 0px;
 	right: 35px;
-	top: 1165px;
+	top: 100%;
 	background: rgba(58,55,55,1);
 	border: thin solid #523535;
 }
 
 .title {
-    font-family: arapey;
+    font-family: "Franklin Gothic Heavy";
     font-size: 18pt;
     margin-right: 100px;
 }
@@ -80,17 +85,17 @@
 }
 
 #menu{
-	height: 980px;
-	width: 300px;
+	height: 84%;
+	width: 21%;
 	float: left;
 	margin-left: 32px;
-	margin-top: 20px;
+	margin-top: 30px;
 	top: 225px;
-	font-family: arapey;
-	padding: 5px 5px 5px 5px;
+	font-family: arial;
+	padding: 5px;
 	font-style: normal;
-	font-weight: 400;
-	font-size: 20px;
+	font-weight: bold;
+	font-size: 16px;
     color: #F9F9F9;
 	position: absolute;
 	left: 1px;
@@ -130,9 +135,9 @@ div.scroll {
 #map{
 	height: 1020px;
 	width: 98%;
-	font-family: arapey;
+	font-family: arial;
 	font-style: normal;
-	font-weight: 400;
+	font-weight: bold;
 	border: medium solid #7E5555;
 	z-index: 10;
 	margin-left: 10px;
@@ -141,14 +146,14 @@ div.scroll {
 
 /*Arch image at top of page*/
 img {
-    width: 125px;
+    width: 135px;
     margin-left: 10px;
     margin-top: -30px;
 }
     
 
 h1 {
-	font-family: arapey;
+	font-family: "Franklin Gothic Heavy";
 	font-size: 60px;
     position: relative;
     margin-top: -160px;
@@ -161,7 +166,8 @@ h1 {
 
 /*"Subjective Marker" in menu box*/
 h2 {
-	font-family: arapey;
+	font-family: arial;
+	font-weight: bold;
 	font-size: 18pt;
 	text-align: center;
 	color: #F7F4F4;
@@ -207,7 +213,7 @@ body{
 }
 
 .temporal-legend {
-	font-size: 18pt;
+	font-size: 14pt;
 	font-style: bold;
 	line-height: 120%;
 	background-color: rgba(58,55,55,.5);/*#6E6564*/
@@ -217,7 +223,7 @@ body{
 	text-align: center;
 	float: left;
 	position: relative;
-	bottom: 85px;
+	bottom: 90px;
 	border: thin solid #000000;
 }
 
