--- a/css/satstyle.css
+++ b/css/satstyle.css
@@ -161,9 +161,8 @@ h2 {
 }
 
 body{
-    background-color: #E8E6E1;
 /*    background-color: #ffffff;
-*/	font-family: Arial, sans-serif;
+*/	font-family: Franklin Gothic Heavy;
 	font-style: normal;
 	font-weight: 400;
 	color: #675A5A;
