--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ src: url(franklin_gothic_heavy.ttf);
   text-align: center;
   padding-right: 20px;
   padding-left: 20px;
-  margin-top: -.5%;
+  margin-top: -1%;
   margin-right: 25%;
   margin-left: 25%;
 }
@@ -23,7 +23,7 @@ src: url(franklin_gothic_heavy.ttf);
 .nav li {
   font-family: arial;
   font-weight: bold;
-  font-size: 1em;
+  font-size: .8em;
   line-height: 40px;
   height: 40px;
   margin-bottom: 0px;
@@ -59,8 +59,8 @@ src: url(franklin_gothic_heavy.ttf);
 	width: 510px;
     padding: 10px;
 	z-index: 21;
-	right: 35px;
-	top: 100%;
+	right: 45px;
+	bottom: -80px;
 	background: rgba(58,55,55,1);
 	border: thin solid #523535;
 }
@@ -85,17 +85,16 @@ src: url(franklin_gothic_heavy.ttf);
 }
 
 #menu{
-	height: 84%;
-	width: 21%;
+	height: 86%;
+	width: 230px;
 	float: left;
-	margin-left: 32px;
-	margin-top: 30px;
-	top: 225px;
+	margin-left: 30px;
+	margin-top: 60px;
+	top: 190px;
 	font-family: arial;
 	padding: 5px;
 	font-style: normal;
-	font-weight: bold;
-	font-size: 16px;
+	font-size: 12px;
     color: #F9F9F9;
 	position: absolute;
 	left: 1px;
@@ -123,7 +122,6 @@ div.scroll {
 	padding-left: 3px;
 	border: thin solid #000000;
 	color: #F7F4F4;
-	font-weight: 500;
 	letter-spacing: normal;
 }
 
@@ -133,42 +131,48 @@ div.scroll {
 }
 
 #map{
-	height: 1020px;
-	width: 98%;
-	font-family: arial;
-	font-style: normal;
-	font-weight: bold;
+	position: absolute;
+	height: 960px;
+	width: 95%;
 	border: medium solid #7E5555;
 	z-index: 10;
-	margin-left: 10px;
-	margin-top: -45px;
+	left: 10px;
+	top: 215px;
+	margin: 10px;
 }
 
 /*Arch image at top of page*/
 img {
-    width: 135px;
+	position: relative;
+	margin-top: -40px;
+    width: 150px;
+    height: 200px;
     margin-left: 10px;
-    margin-top: -30px;
+    float: left;
 }
     
 
 h1 {
 	font-family: "Franklin Gothic Heavy";
-	font-size: 60px;
-    position: relative;
-    margin-top: -160px;
-    margin-bottom: 75px;
+	position: absolute;
+	font-size: 30px;
+    margin-top: 70px;
 	font-style: normal;
-	font-weight: 400;
 	line-height: 120%;
-    margin-left: 200px;
+    margin-left: 175px;
+}
+
+/*colors text */
+h1 .emphasis {
+	color: #8C2A3F;
+	margin-top: -5px;
 }
 
 /*"Subjective Marker" in menu box*/
 h2 {
 	font-family: arial;
 	font-weight: bold;
-	font-size: 18pt;
+	font-size: 14pt;
 	text-align: center;
 	color: #F7F4F4;
 	margin-bottom: 10px;
@@ -179,10 +183,6 @@ h2 {
 }
 
 body{
-    background-color: #E8E6E1;
-	font-family: arapey;
-	font-style: normal;
-	font-weight: 400;
 	color: #675A5A;
 }
 
@@ -213,8 +213,9 @@ body{
 }
 
 .temporal-legend {
-	font-size: 14pt;
-	font-style: bold;
+	font-size: 10pt;
+	font-family: arial;
+	font-weight: bold;
 	line-height: 120%;
 	background-color: rgba(58,55,55,.5);/*#6E6564*/
 	color: #F7F4F4;
@@ -223,7 +224,7 @@ body{
 	text-align: center;
 	float: left;
 	position: relative;
-	bottom: 90px;
+	bottom: 130px;
 	border: thin solid #000000;
 }
 
@@ -232,7 +233,7 @@ body{
 	padding-top: 6px 6px 6px 6px;
 	background-color: #C35557;
 	position: relative;
-	bottom: 85px;
+	bottom: 140px;
 }
 
 .leaflet-popup-content-wrapper {
