css some js changes
Fixed timeline, more css refinements. Almost there...

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -28,7 +28,8 @@ body:after {
 .lightbox .lb-image {
   display: block;
   height: auto;
-  max-width: inherit;
+  width: inherit;
+  margin-top: 175px;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   -ms-border-radius: 3px;
