--- a/css/satstyle.css
+++ b/css/satstyle.css
@@ -15,14 +15,15 @@
   text-align: center;
   padding-right: 20px;
   padding-left: 20px;
-  margin-top: -.5%;
+  margin-top: -8px;
   margin-right: 25%;
   margin-left: 25%;
 }
 
 .nav li {
   font-family: Arial, sans-serif;
-  font-size: 1em;
+  font-weight: bold;
+  font-size: .9em;
   line-height: 40px;
   height: 40px;
   margin-bottom: 0px;
@@ -63,21 +64,20 @@
 
 #menu{
 	height: 980px;
-	width: 300px;
+	width: 320px;
 	float: left;
-	margin-left: 32px;
-	margin-top: 20px;
+	margin-left: 30px;
+	margin-top: 18px;
 	top: 225px;
 	font-family: Arial, sans-serif;
 	padding: 5px 5px 5px 5px;
-	font-style: normal;
-	font-weight: 400;
-	font-size: 20px;
-    color: #F9F9F9;
+	font-size: 12pt;
+    color: #000000;
+    line-height: 150%;
 	position: absolute;
 	left: 1px;
 	z-index: 21;
-	background: rgba(58,55,55,.5);
+	background: #F2F2F2;
 	border: thin solid #000000;
 }
 
@@ -99,18 +99,19 @@ div.scroll {
 	padding-bottom: 3px;
 	padding-left: 3px;
 	border: thin solid #000000;
-	color: #F7F4F4;
+	color: #000000;
 	font-weight: 500;
 	letter-spacing: normal;
 }
 
 .checkedNum {
+	font-size: medium;
 	margin-top: -20px;
 	color: #F9F9F9;
 }
 
 #map{
-	height: 1040px;
+	height: 800px;
 	opacity: 1.0;
 	width: 97%;
 	font-family: Arial, sans-serif;
@@ -119,40 +120,42 @@ div.scroll {
 	border: medium solid #7E5555;
 	z-index: 10;
 	margin-left: 10px;
-	margin-top: -45px;
+	margin-top: 10px;
 	pointer-events: all;
 }
 
 /*Arch image at top of page*/
 img {
-    width: 125px;
+	position: relative;
+	margin-top: -45px;
+    width: 150px;
+    height: 200px;
     margin-left: 10px;
-    margin-top: -30px;
+    float: left;
+    margin-bottom: 20px;
 }
-    
+   
 h1 {
-	font-family: Arial, sans-serif;
-	font-size: 60px;
-    position: relative;
-    margin-top: -160px;
-    margin-bottom: 75px;
-	font-style: normal;
-	font-weight: 400;
+	font-family: Franklin Gothic Heavy;
+	font-size: 30px;
+    position: absolute;
+    float: right;
+    margin-top: 70px;
 	line-height: 120%;
-    margin-left: 200px;
+    margin-left: 180px;
 }
 
 h1 a {
-	text-decoration: none;
 	color: red;
 }
 
 /*"Subjective Marker" in menu box*/
 h2 {
-	font-family: Arial, sans-serif;
+	font-family: arial;
 	font-size: 18pt;
 	text-align: center;
-	color: #F7F4F4;
+/*	color: #3B3B3B;
+*/	color: #000000;
 	margin-bottom: 10px;
 	margin-top: 0px;
 	margin-left: -5px;
@@ -174,7 +177,7 @@ body{
 /*SM markers*/
 .leaflet-clickable {
 	marker-width: 100%;
-    stroke-opacity: .8;
+    stroke-opacity: 1;
 	z-index: -5;
 	position: absolute;
 	-webkit-transition-property: background color;
@@ -196,16 +199,17 @@ body{
 
 .temporal-legend {
 	font-size: 14pt;
+	font-family: arial;
 	font-weight: bold;
 	line-height: 110%;
-	background-color: rgba(58,55,55,.5);/*#6E6564*/
-	color: #F7F4F4;
+	background-color: #F2F2F2;
+	color: #000000;
 	padding: 5px;
 	width: 125px;
 	text-align: center;
 	float: left;
 	position: relative;
-	bottom: 5px;
+	bottom: 23px;
 	border: thin solid #000000;
 }
 
@@ -229,6 +233,13 @@ body{
 
 /*Magnifier glass
 */
+#dvAllMyZooms {
+    background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+    height: 0;
+    width: 0;
+    z-index: 0;
+}
+
 #zoommap,.zoommap  {
   background: #FFFFFF;
   position: absolute;
@@ -276,4 +287,12 @@ border-radius: 50%;
 
 .leaflet-overlay-pane {
 	z-index: 100;
+}
+
+#sliderContainer {
+	bottom: 48px;
+    position: absolute;
+    right: 166px;
+	margin-right: 30px;
+	z-index: 10000;
 }
