--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ src: url(franklin_gothic_heavy.ttf);
   text-align: center;
   padding-right: 20px;
   padding-left: 20px;
-  margin-top: -1%;
+  margin-top: -8px;
   margin-right: 25%;
   margin-left: 25%;
 }
@@ -23,7 +23,7 @@ src: url(franklin_gothic_heavy.ttf);
 .nav li {
   font-family: arial;
   font-weight: bold;
-  font-size: .8em;
+  font-size: .9em;
   line-height: 40px;
   height: 40px;
   margin-bottom: 0px;
@@ -59,9 +59,9 @@ src: url(franklin_gothic_heavy.ttf);
 	width: 510px;
     padding: 10px;
 	z-index: 21;
-	right: 45px;
-	bottom: -80px;
-	background: rgba(58,55,55,1);
+	right: 30px;
+	top: 940px;
+  background-color: rgba(58,55,55,.7);
 	border: thin solid #523535;
 }
 
@@ -85,21 +85,22 @@ src: url(franklin_gothic_heavy.ttf);
 }
 
 #menu{
-	height: 86%;
-	width: 230px;
+	height: 740px;
+	width: 300px;
 	float: left;
 	margin-left: 30px;
 	margin-top: 60px;
-	top: 190px;
+	top: 180px;
 	font-family: arial;
 	padding: 5px;
 	font-style: normal;
-	font-size: 12px;
-    color: #F9F9F9;
+	font-size: 12pt;
+	line-height: 150%;
+    color: #ffffff;
 	position: absolute;
 	left: 1px;
 	z-index: 21;
-	background: rgba(58,55,55,1);
+  	background-color: rgba(58,55,55,.7);
 	border: thin solid #000000;
 }
 
@@ -111,18 +112,18 @@ src: url(franklin_gothic_heavy.ttf);
 
 div.scroll {
 	width: 95%;
-	height: 85%;
+	height: 78%;
 	margin-left: 3px;
 	margin-bottom: 3px;
-	overflow: scroll;
+	overflow-y: scroll;
 	z-index: 10;
+	line-height: 120%
 	padding-top: 3px;
 	padding-right: 3px;
 	padding-bottom: 3px;
 	padding-left: 3px;
 	border: thin solid #000000;
-	color: #F7F4F4;
-	letter-spacing: normal;
+    color: #FFFFFF;
 }
 
 .checkedNum {
@@ -132,8 +133,8 @@ div.scroll {
 
 #map{
 	position: absolute;
-	height: 960px;
-	width: 95%;
+	height: 800px;
+	width: 97%;
 	border: medium solid #7E5555;
 	z-index: 10;
 	left: 10px;
@@ -174,7 +175,7 @@ h2 {
 	font-weight: bold;
 	font-size: 14pt;
 	text-align: center;
-	color: #F7F4F4;
+    color: #ffffff;
 	margin-bottom: 10px;
 	margin-top: 0px;
 	margin-left: -5px;
@@ -213,32 +214,34 @@ body{
 }
 
 .temporal-legend {
-	font-size: 10pt;
+	font-size: 12pt;
 	font-family: arial;
-	font-weight: bold;
 	line-height: 120%;
-	background-color: rgba(58,55,55,.5);/*#6E6564*/
+	background-color: rgba(58,55,55,.7);
 	color: #F7F4F4;
-	padding: 10px 10px 10px 10px;
+	padding: 10px ;
 	width: 150px;
 	text-align: center;
 	float: left;
 	position: relative;
-	bottom: 130px;
+	bottom: 90px;
 	border: thin solid #000000;
 }
+
+
 
 .range-slider {
 	width: 532px;
 	padding-top: 6px 6px 6px 6px;
 	background-color: #C35557;
 	position: relative;
-	bottom: 140px;
+	bottom: 90px;
 }
 
 .leaflet-popup-content-wrapper {
-    font-size: 18pt;
-    background-color: rgba(58,55,55,.7);
+    font-size: 14pt;
+    font-family: arial;
+    background-color: rgba(58,55,55,.8);
     color: #F2ECEB;
     line-height: 110%;
     border: thin solid #000000;
