--- a/css/style2.css
+++ b/css/style2.css
@@ -18,14 +18,14 @@
   padding-right: 1px;
   padding-left: 1px;
   margin-top: -3%;
-  margin-right: 20%;
-  margin-left: 20%;
+  margin-right: 25%;
+  margin-left: 25%;
 }
 
 .nav li {
   font-family: arial;
   font-weight: bolder;
-  font-size: .8em;
+  font-size: .9em;
   line-height: 40px;
   height: 40px;
   margin-bottom: 0px;
@@ -61,23 +61,20 @@
 body {
 	width: 100%;
 	color: #574B4D;
-	font-family: arapey;
 	margin: 3%;
+	margin-right: 30px;
 	background-size: contain;
 }
 
 /*narrative text*/
 body p {
-	font-size: 14pt;
+	font-size: 16pt;
 	line-height: 130%;
 	color: #403E3E;
-	margin-right: 7%;
-	margin-left: 2%;
+	margin-left: 20px;
+	margin-right: 60px;
 	display: inline-block;
-	padding-top: 10px;
-	padding-right: 10px;
-	padding-bottom: 10px;
-	padding-left: 10px;
+	padding: 10px;
 	visibility: hidden;
 	font-family: arapey;
 	font-style: normal;
@@ -86,24 +83,19 @@ body p {
 
 img {
 	float:left;
-	width: 475px;
+	margin-left: 20px;
+	width: 430px;
 	height: 335px;
 	visibility: hidden;
 }
 
 h1 {
 	font-family: Franklin Gothic Heavy;
-	font-style: normal;
-	font-weight: 400;
 	font-size: 24pt;
-	text-decoration: none;
 	color: #675A5A;
-	clear: none;
-	vertical-align: top;
 	width: 40%;
-	padding-left: 20px;
 	float: left;
-	margin-top: 70px;
+	margin-top: 90px;
 	line-height: 130%;
 	visibility: hidden;
 }
