--- a/css/style3.css
+++ b/css/style3.css
@@ -15,15 +15,15 @@
   text-align: center;
   padding-right: 1px;
   padding-left: 1px;
-  margin-top: -2%;
-  margin-right: 20%;
-  margin-left: 20%;
+  margin-top: -20px;
+  margin-right: 25%;
+  margin-left: 25%;
 }
 
 .nav li {
   font-family: arial;
   font-weight: bolder;
-  font-size: .8em;
+  font-size: .9em;
   line-height: 40px;
   height: 40px;
   margin-bottom: 0px;
@@ -56,6 +56,7 @@
 
 img {
     width: 125px;
+    margin-top: -30px;
     position: absolute;
     float: left;
     margin-left: 10px;
@@ -67,8 +68,7 @@ h1 {
   font-size: 30px;
   position: absolute;
   float: right;
-  clear: none;
-  top: 100px;
+  top: 80px;
   margin-left: 150px;
   font-style: normal;
   line-height: 120%;
@@ -81,7 +81,7 @@ h1 .emphasis {
 
 h2 {
 	font-family: Franklin Gothic Heavy;
-	font-size: 14pt;
+	font-size: 16pt;
   line-height: 130%;
 	text-align: left;
   width: 80%;
@@ -105,7 +105,7 @@ body {
 }
 
 #text {
-  font-size: 12pt;
+  font-size: 14pt;
   line-height: 130%;
 	margin-top: 225px;
 	margin-left: 40px;
