--- a/css/satstyle.css
+++ b/css/satstyle.css
@@ -68,47 +68,46 @@
 	height: auto;
 	width: 320px;
 	float: left;
-	margin-left: 30px;
-	margin-top: 18px;
+	margin-left: 23px;
+	margin-top: 10px;
 	top: 55px;
 	font-family: Arial, sans-serif;
-	padding: 5px 5px 5px 5px;
-	font-size: 12pt;
-    color: #000000;
-    line-height: 150%;
+	padding: 5px;
+	font-size: 11pt;
+  color: #000000;
+  line-height: 150%;
 	position: absolute;
 	left: 1px;
 	z-index: 21;
-	background: #F2F2F2;
-	border: thin solid #000000;
+}
+
+.mheader {
+  padding: 5px;
+  width: 95%;
+  font-weight: 600;
+  background-color: rgba(220,220,220,.7);
+  border: thin solid #000000;
 }
 
 /*"Check" buttons on menu sidebar*/
-.button {
+.button, .buttonMin {
     margin-right: 4px;
-}
-
-.buttonMin {
-  border:solid 1px;
-    width: 25px;
-    height: 23px;
-    float:right;
-    cursor:pointer;
 }
 
 div.scroll {
 	width: 95%;
 	height: auto;
 	margin-left: 3px;
-	margin-bottom: 3px;
 	overflow-y: scroll;
 	z-index: 10;
+  font-weight: 600;
 	padding-top: 3px;
 	padding-right: 3px;
 	padding-bottom: 3px;
 	padding-left: 3px;
 	border: thin solid #000000;
 	color: #000000;
+  background-color: rgba(220,220,220,.7);
 }
 
 .checkedNum {
@@ -132,7 +131,7 @@ div.scroll {
 }
 
 /*Arch image at top of page*/
-img {
+/*img {
 	position: relative;
 	margin-top: -45px;
     width: 150px;
@@ -141,17 +140,7 @@ img {
     float: left;
     margin-bottom: 20px;
     opacity: .5;
-}
-   
-h1 {
-	font-family: Franklin Gothic Heavy;
-	font-size: 30px;
-    position: absolute;
-    float: right;
-    margin-top: 70px;
-	line-height: 120%;
-    margin-left: 180px;
-}
+}*/
 
 h2 a {
 	color: red;
@@ -160,8 +149,8 @@ h2 a {
 /*"Subjective Marker" in menu box*/
 h2 {
 	font-family: Franklin Gothic Heavy;
-	font-size: 14pt;
-	text-align: center;
+	font-size: 16pt;
+	text-align: left;
 /*	color: #3B3B3B;
 */	color: #000000;
 	margin-bottom: 10px;
@@ -172,8 +161,7 @@ h2 {
 }
 
 body{
-/*    background-color: #ffffff;
-*/	font-family: Franklin Gothic Heavy;
+	font-family: Franklin Gothic Heavy;
 	font-style: normal;
 	font-weight: 400;
 	color: #675A5A;
@@ -272,16 +260,16 @@ body{
 */
 #border {
 /*  border: 1px solid #404040;*/  
-border-radius: 50%;
-/*  box-shadow: 0 0 10px rgba(0,0,0,0.25);
+/*border-radius: 50%;
+*//*  box-shadow: 0 0 10px rgba(0,0,0,0.25);
 */}
 
 .overlay {
   position: absolute;
   pointer-events: none;
-  overflow: hidden;
-  width: 150px;
-  height: 150px;
+/*  overflow: hidden;
+*/  width: 100px;
+  height: 100px;
   z-index: 1000;
 }
 
