--- a/css/style.css
+++ b/css/style.css
@@ -56,12 +56,11 @@ src: url(franklin_gothic_heavy.ttf);
 
 #vcr-controls {
 	position: absolute;
-	width: 510px;
+	width: auto;
     padding: 10px;
 	z-index: 21;
 	right: 30px;
-	top: 940px;
-  	background-color: rgba(58,55,55,.8);
+  	background-color: rgba(220,220,220,.7);
 	border: thin solid #523535;
 }
 
@@ -78,6 +77,7 @@ src: url(franklin_gothic_heavy.ttf);
     opacity: .4;
 }
 
+
 #menu{
 	height: 740px;
 	width: 325px;
@@ -86,42 +86,51 @@ src: url(franklin_gothic_heavy.ttf);
 	top: 10px;
 	top: 75px;
 	font-family: arial;
+	font-weight: 600;
 	padding: 5px;
 	font-style: normal;
 	font-size: 11pt;
 	line-height: 150%;
-    color: #ffffff;
+    color: #675A5A;
 	position: absolute;
 	left: 1px;
 	z-index: 21;
-  	background-color: rgba(58,55,55,.8);
-	border: thin solid #000000;
 }
+
+.mheader {
+	color: black;
+  	padding-top: 10px;
+  	padding-left: 10px;
+  	padding-right: 6px;
+  	width: 95%;
+  	background-color: rgba(220,220,220,.9);
+  	border: thin solid #000000;
+}
+
 
 /*"Check" buttons on menu sidebar*/
 .button {
 /*    margin-right: 4px;
 */    text-align: center;
-
-
 }
 
 div.scroll {
-	width: 95%;
-	height: 78%;
-	margin-left: 3px;
-	margin-bottom: 3px;
+	width: 97%;
+	height: auto;
 	overflow-y: scroll;
 	z-index: 10;
 	line-height: 140%;
+	font-weight: 600;
 	padding: 5px;
+	background-color: rgba(220,220,220,.9);
 	border: thin solid #000000;
-    color: #FFFFFF;
+    color: black;
 }
 
 .checkedNum {
+	font-size: medium;
 	margin-top: -20px;
-	color: #F9F9F9;
+	color: #675A5A;
 }
 
 #map{
@@ -135,51 +144,21 @@ div.scroll {
 	margin: 10px;
 }
 
-/*Arch image at top of page*/
-img {
-	position: relative;
-	margin-top: -40px;
-    width: 150px;
-    opacity: .5;
-    height: 200px;
-    margin-left: 10px;
-    float: left;
-}
-    
-
-h1 {
-	font-family: "Franklin Gothic Heavy";
-	position: absolute;
-	font-size: 30px;
-    margin-top: 70px;
-	font-style: normal;
-	line-height: 120%;
-    margin-left: 175px;
-}
-
-/*colors text */
-h1 .emphasis {
-	color: #8C2A3F;
-	margin-top: -5px;
-}
 
 /*"Subjective Marker" in menu box*/
 h2 {
 	font-family: Franklin Gothic Heavy;
 	font-weight: bold;
-	font-size: 16pt;
-	text-align: center;
-    color: #ffffff;
-	margin-bottom: 10px;
-	margin-top: 0px;
-	margin-left: -5px;
-	padding: 5px;
+	font-size: 18pt;
+	text-align: left;
+    color: #675A5A;
+    margin-top: 0px;
 }
 
-body{
+/*body{
 	color: #675A5A;
 }
-
+*/
 .leafletoclickable: hover{
 	width: 5;
 	z-index: 10;
@@ -209,26 +188,26 @@ body{
 .temporal-legend {
 	font-size: 11pt;
 	font-family: arial;
+	font-weight: 600;
 	line-height: 120%;
-	background-color: rgba(58,55,55,.8);
-	color: #F7F4F4;
+	background-color: rgba(220,220,220,.9);
+	color: #675A5A;
 	padding: 10px ;
 	width: 110px;
+	right: 0px;
 	text-align: center;
 	float: left;
 	position: relative;
-	bottom: 90px;
+	bottom: 50px;
 	border: thin solid #000000;
 }
 
-
-
 .range-slider {
 	width: 532px;
-	padding-top: 6px 6px 6px 6px;
-	background-color: #C35557;
+	padding: 6px;
+	background-color: rgba(220,220,220,.9);
 	position: relative;
-	bottom: 90px;
+	bottom: 70px;
 }
 
 .leaflet-popup-content-wrapper {
