--- a/css/satstyle.css
+++ b/css/satstyle.css
@@ -18,16 +18,16 @@
   padding-right: 20px;
   padding-left: 20px;
   margin-top: -8px;
-  margin-right: 25%;
-  margin-left: 25%;
+  margin-right: 30%;
+  margin-left: 30%;
 }
 
 .nav li {
   font-family: Arial, sans-serif;
   font-weight: bold;
-  font-size: .9em;
-  line-height: 40px;
-  height: 40px;
+  font-size: .7em;
+  line-height: 25px;
+  height: 25px;
   margin-bottom: 0px;
 }
  
@@ -68,9 +68,9 @@
 	height: auto;
 	width: 320px;
 	float: left;
-	margin-left: 23px;
+	margin-left: 20px;
 	margin-top: 10px;
-	top: 55px;
+	top: 35px;
 	font-family: Arial, sans-serif;
 	padding: 5px;
 	font-size: 11pt;
@@ -95,9 +95,9 @@
 }
 
 div.scroll {
-	width: 95%;
+	width: 96%;
 	height: auto;
-	margin-left: 3px;
+	margin-left: 0px;
 	overflow-y: scroll;
 	z-index: 10;
   font-weight: 600;
@@ -165,6 +165,7 @@ body{
 	font-style: normal;
 	font-weight: 400;
 	color: #675A5A;
+  background-color: #E8E8E8;
 	min-width: 900px;
 	min-height: 700px;
 	overflow-x: hidden;
@@ -205,16 +206,15 @@ body{
 	text-align: center;
 	float: left;
 	position: relative;
-	bottom: 23px;
+	bottom: 10px;
 	border: thin solid #000000;
 }
 
 .range-slider {
-	width: 532px;
+	width: 320px;
 	padding: 6px;
 	background-color: #C35557;
 	position: relative;
-	bottom: 5px;
 	z-index: 1001;
 }
 
